remove mention of community and repair gradient behind buy

--- a/assets/landing_bus.less
+++ b/assets/landing_bus.less
@@ -1750,8 +1750,8 @@ footer {
         position: relative;
         background: linear-gradient(180deg,
          @color-background 0%,
-         #492d00 70%,
-         hsl(33.35deg 25.16% 7.65%) 75%,
+         #492d00 60%,
+         hsl(33.35deg 25.16% 7.65%) 67%,
          @color-background 95%
         );
 
